# fast_api_test

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
